syntax = "proto3";
package pb;
option go_package = "pb";

// Request represents a message sent from client to server
message Request {
  string message = 1;  // The message content
}

// Response represents a message sent from server to client
message Response {
  string message = 1;  // The response content
}

// StreamingService defines the streaming RPC service
service StreamingService {
  rpc StreamRequestEcho (stream Request) returns (Response) {}
  
  rpc StreamResponseEcho (Request) returns (stream Response) {}
  
  rpc BidirectionalEcho (stream Request) returns (stream Response) {}
  
  rpc UnaryEcho (Request) returns (Response) {}
} 